--- a/style.css
+++ b/style.css
@@ -1,332 +1,250 @@
+/*Шрифты для названия и заголовков*/
+@font-face {
+    font-family: "Acme";
+    src: url("fonts/TitleFonts/Acme/Acme-Regular.ttf");
+}
+@font-face {
+    font-family: "Alfa_Slab_One";
+    src: url("fonts/TitleFonts/Alfa_Slab_One/AlfaSlabOne-Regular.ttf");
+}
+@font-face {
+    font-family: "Anton";
+    src: url("fonts/TitleFonts/Anton/Anton-Regular.ttf");
+}
+@font-face {
+    font-family: "Edu_QLD_Beginner";
+    src: url("fonts/TitleFonts/Edu_QLD_Beginner/static/EduQLDBeginner-Regular.ttf");
+}
+@font-face {
+    font-family: "Fjalla_One";
+    src: url("fonts/TitleFonts/Fjalla_One/FjallaOne-Regular.ttf");
+}
+@font-face {
+    font-family: "Fredoka_One";
+    src: url("fonts/TitleFonts/Fredoka_One/FredokaOne-Regular.ttf");
+}
+@font-face {
+    font-family: "Indie_Flower";
+    src: url("fonts/TitleFonts/Indie_Flower/IndieFlower-Regular.ttf");
+}
+@font-face {
+    font-family: "Mali";
+    src: url("fonts/TitleFonts/Mali/Mali-Regular.ttf");
+}
+@font-face {
+    font-family: "Permanent_Marker";
+    src: url("fonts/TitleFonts/Permanent_Marker/PermanentMarker-Regular.ttf");
+}
+@font-face {
+    font-family: "Rampart_One";
+    src: url("fonts/TitleFonts/Rampart_One/RampartOne-Regular.ttf");
+}
+@font-face {
+    font-family: "Righteous";
+    src: url("fonts/TitleFonts/Righteous/Righteous-Regular.ttf");
+}
+@font-face {
+    font-family: "Russo_One";
+    src: url("fonts/TitleFonts/Russo_One/RussoOne-Regular.ttf");
+}
+@font-face {
+    font-family: "Shadows_Into_Light";
+    src: url("fonts/TitleFonts/Shadows_Into_Light/ShadowsIntoLight-Regular.ttf");
+}
+@font-face {
+    font-family: "Squart_Peg";
+    src: url("fonts/TitleFonts/Square_Peg/SquarePeg-Regular.ttf");
+}
+
+/*Шрифты для названия и заголовков*/
+@font-face {
+    font-family: "Comfortaa";
+    src: url("fonts/TextFonts/Comfortaa/static/Comfortaa-Regular.ttf");
+}
+@font-face {
+    font-family: "Exo2";
+    src: url("fonts/TextFonts/Exo_2/static/Exo2-Regular.ttf");
+}
+@font-face {
+    font-family: "Monsterrat";
+    src: url("fonts/TextFonts/Montserrat/static/Montserrat-Regular.ttf");
+}
+@font-face {
+    font-family: "Mulish";
+    src: url("fonts/TextFonts/Mulish/static/Mulish-Black.ttf");
+}
+@font-face {
+    font-family: "Nanum_Gothic";
+    src: url("fonts/TextFonts/Nanum_Gothic/NanumGothic-Regular.ttf");
+}
+@font-face {
+    font-family: "Yanone_Kaffeesatz";
+    src: url("fonts/TextFonts/Yanone_Kaffeesatz/static/YanoneKaffeesatz-Regular.ttf");
+}
+
 body {
     margin: 0;
 }
 
 header {
-    height: 100vh;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
-#top_menu {
+#top_title {
+    color: white;
+    background-color: black;
+    text-align: center;
+    font-size: 2vw;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    background-color: black;
-    width: 100%;
+    outline: none;
 }
 
-#top_logo {
-    border-radius: 100vw;
-    width: 6vw;
-    margin: 1vw;
+#top_title p {
+    width: 74vw;
+    margin-left: 10%;
+    font-family: "Fjalla_One";
 }
 
-#contacts {
-    color: white;
-    font-size: 1.5vw;
-    font-family: Helvetica;
-}
-
-#contacts p:hover {
-    color: rgb(216, 219, 26);
-    transition: 0.3s;
-    cursor: pointer;
-}
-
-#space {
-    width: 75%;
-    color: white;
-    text-align: center;
-    font-size: 3vw;
-    margin-top: 2.5vh;
-    font-family: Helvetica;
-}
-
-#space:hover {
+#top_title p:hover {
     cursor: default;
 }
 
 #header_content {
-    text-align: center;
-    width: 35vw;
-    height: 40vh;
-    margin: 0 auto;
-    margin-top: 5%;
-    animation: show 3s 1;
-    overflow: hidden;
-}
-
-@keyframes show {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-#header_content h1 {
-    margin-top: 10%;
-    margin-bottom: 0;
-    text-align: center;
-    font-size: 6.5vw;
-    font-family: Helvetica;
-}
-
-#header_content h1:hover {
-    cursor: default;
-}
-
-#header_content p {
-    margin: 0 0.5vw;
-    text-align: left;
-    font-size: 3vw;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-#header_content p:hover {
-    cursor: default;
-}
-
-.button {
-    color: white;
-    background-color: black;
-    border: none;
-    border-radius: 1vw;
-    font-size: 3vw;
-    padding: 1vh 2vw;
-    animation: show 3s 1;
-}
-
-.button:hover {
-    color: black;
-    background-color: rgb(216, 219, 26);
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-.button2 {
-    color: white;
-    background-color: black;
-    border: none;
-    border-radius: 1vw;
-    font-size: 3vw;
-    padding: 1vh 2vw;
-    margin: 1vh auto;
-}
-
-.button2:hover {
-    color: black;
-    background-color: rgb(216, 219, 26);
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-.content {
-    height: 100vh;
-}
-
-#about p {
-    width: 50%;
-    text-align: left;
-    font-size: 2vw;
-    font-family: Arial, Helvetica, sans-serif;
-    animation: show 3s 1;
-    margin: 2vh 2vw;
-}
-
-#blablabla {
-    display: none;
-    animation-duration: 1.5s;
-    animation-fill-mode: both;
-    animation-name: fadeIn;
-    text-align: center;
-}
-
-#blablabla.open {
-    display: block;
-}
-
-#blablabla.close {
-    display: none;
-}
-
-.popup {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: rgba(17, 17, 17, 0.5);
-    transition: all 0.5s ease;
-    display: none;
-}
-
-.popup_open {
-    display: block;
-}
-
-.popup_close {
-    display: none;
-}
-
-.popup__container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: #fff;
-    border-radius: 10px;
-    max-width: 25vw;
-    min-width: 10vw;
-    width: 100%;
-}
-
-.popup__wrapper {
-    padding: 40px;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-#formm {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
+    flex-direction: row;
 }
 
-#formm input {
-    width: 10vw;
-    text-align: center;
-    font-size: 1.2vw;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0 auto;
-}
-
-#formm button {
-    color: white;
-    background-color: black;
-    border: none;
-    border-radius: 1vw;
-    font-size: 1vw;
-    padding: 1vh 2vw;
-    animation: show 3s 1;
-    width: 10vw;
-    margin: 1vh auto;
-}
-
-#formm label {
-    font-size: 1.5vw;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-#formm button:hover {
-    color: black;
-    background-color: rgb(216, 219, 26);
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-#close {
-    margin-top: 4%;
-    margin-left: 93%;
+#contacts {
+    margin-top: 3vh;
     text-align: right;
-    width: 1vw;
-    height: 2vh;
-    background-color: red;
-    clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
+    font-size: 1.5vw;
+    font-family: "Edu_QLD_Beginner";
 }
 
-#close:hover {
-    cursor: pointer;
+#contacts a {
+    text-decoration: none;
+    color: white;
 }
 
-.product {
+#contacts a:hover {
+    transition: 0.3s;
+    color: rgb(162, 214, 65);
+}
+
+#content {
+    display: flex;
+    flex-direction: row;
+}
+
+#logo {
+    width: 25vw;
+    margin: 5vh 5vw;
+}
+
+#slogan {
+    font-size: 2vw;
+    margin-top: -2vh;
+    margin-left: 5vw;
+}
+
+#slogan:hover {
+    cursor: default;
+}
+
+#description {
+    width: 50vw;
+    font-size: 2.3vw;
+    margin: 10vh 5vw;
+    font-family: "Comfortaa";
+}
+
+#description:hover {
+    cursor: default;
+}
+
+#products {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-.product_item {
-    background-color: grey;
+.product {
+    border: 1vw solid black;
     border-radius: 1vw;
-    margin: 1.5vh 2vw;
-    padding: 1vh 1vw;
-}
-
-.product_item .image {
+    background-color: black;
+    margin: 1vh 2vw;
     width: 10vw;
-    height: 15vh;
-    background-color: black;
-    border-radius: 1vw;
-}
-
-#products {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-footer {
-    background-color: black;
     height: 25vh;
-}
-
-footer p {
-    color: white;
-    margin: 0 0.5vw;
-    text-align: left;
-    font-size: 1.5vw;
-    font-family: Arial, Helvetica, sans-serif
-}
-
-#social_links {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-#copy_by {
     text-align: center;
 }
 
-.link {
+.product img {
+    width: 10vw;
+    height: 15vh;
+    border-radius: 1vw;
+}
+
+.product p {
+    font-size: 1.5vw;
+    color: white;
+    margin: 0;
+}
+
+.product p:hover {
+    transition: 0.3s;
+    color: rgb(162, 214, 65);
+    cursor: default;
+}
+
+h1 {
+    text-align: center;
+    font-size: 2vw;
+}
+
+#reviews {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#reviews iframe {
+    margin: 1vh 2vw;
+}
+
+#support {
+    text-align: center;
+    margin: 1vh;
+    padding: 0;
+    font-size: 1.7vw;
+}
+
+#support img {
     width: 3vw;
-    margin: 2vh 0.5vw;
+    transform: rotate(30deg);
+    margin: 0;
 }
 
-.more {
-    width: 1.5vw;
-    margin-left: 80%;
+#support a {
+    color: black;
+    text-decoration: none;
 }
 
-.more:hover {
-    cursor: pointer;
-    animation: rotateImg 0.5s 1;
+#support a:hover {
+    transition: 0.3s;
+    color: rgb(162, 214, 65);
 }
 
-@keyframes rotateImg {
-    from {
-        transform: rotate(0);
-    }
-    to {
-        transform: rotate(45deg);
-    }
-}
+#icons_links {
+    background-color: black;
+    padding: 3vh;
+    text-align: center;
+}   
 
-
-.info {
-    display: none;
-}
-
-.show_product_info {
-    display: block;
+#icons_links img {
+    width: 3vw;
+    margin: 0 0.5vw;
 }
