--- a/style.css
+++ b/style.css
@@ -96,15 +96,6 @@ header {
     background-color: black;
     text-align: center;
     font-size: 2vw;
-    display: flex;
-    flex-direction: row;
-    outline: none;
-}
-
-#top_title p {
-    width: 74vw;
-    margin-left: 10%;
-    font-family: "Fjalla_One";
 }
 
 #top_title p:hover {
@@ -114,23 +105,6 @@ header {
 #header_content {
     display: flex;
     flex-direction: row;
-}
-
-#contacts {
-    margin-top: 3vh;
-    text-align: right;
-    font-size: 1.5vw;
-    font-family: "Edu_QLD_Beginner";
-}
-
-#contacts a {
-    text-decoration: none;
-    color: white;
-}
-
-#contacts a:hover {
-    transition: 0.3s;
-    color: rgb(162, 214, 65);
 }
 
 #content {
@@ -157,11 +131,47 @@ header {
     width: 50vw;
     font-size: 2.3vw;
     margin: 10vh 5vw;
-    font-family: "Comfortaa";
 }
 
 #description:hover {
     cursor: default;
+}
+
+#shopping_bag {
+    width: 4vw;
+    position: fixed;
+    margin-left: 90%;
+    margin-top: 15vh;
+}
+
+#shopping_bag_block {
+    position: fixed;
+    margin-left: 90%;
+    margin-top: 20vh;
+    background-color: red;
+    color: white;
+    padding: 0.4vw;
+    width: 1.2vw;
+    height: 2.5vh;
+    text-align: center;
+    border-radius: 100%;
+    font-size: 1.3vw;
+    font-weight: 900;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+#shopping_bag_block:hover {
+    cursor: default;
+}
+
+#counter {
+    color: white;
+    background-color: red;
+    border-radius: 100%;
+}
+
+.one_icon {
+    display: none;
 }
 
 #products {
@@ -172,31 +182,39 @@ header {
 }
 
 .product {
-    border: 1vw solid black;
     border-radius: 1vw;
-    background-color: black;
     margin: 1vh 2vw;
-    width: 10vw;
-    height: 25vh;
+    width: 25vw;
+    height: 40vh;
     text-align: center;
-}
-
-.product img {
-    width: 10vw;
-    height: 15vh;
-    border-radius: 1vw;
+    background-image: url("icons/370.jpg");
+    background-size: 50%;
 }
 
 .product p {
     font-size: 1.5vw;
-    color: white;
-    margin: 0;
+    color: black;
 }
 
 .product p:hover {
-    transition: 0.3s;
-    color: rgb(162, 214, 65);
     cursor: default;
+}
+
+.product button {
+    border: none;
+    color: black;
+    background-color: white;
+    border-radius: 0.5vw;
+    padding: 0.2vh 0.5vw;
+    font-size: 1.3vw;
+    margin-top: 2vh;
+}
+
+.product button:hover {
+    transition: 0.3s;
+    color: black;
+    background-color: rgb(162, 214, 65);
+    cursor: pointer;
 }
 
 h1 {
@@ -213,6 +231,8 @@ h1 {
 
 #reviews iframe {
     margin: 1vh 2vw;
+    color: black;
+    background-color: black;
 }
 
 #support {
