--- a/styles/productsList.css
+++ b/styles/productsList.css
@@ -17,7 +17,6 @@
 }
 
 #shopping_cart {
-    border: 0.3vw solid black;
     border-radius: 0.5vw;
     width: 20vw;
     text-align: center;
@@ -27,8 +26,17 @@
 
 #product_ul {
     overflow-y: auto;
-    max-height: 15vh;
+    max-height: 20vh;
     max-width: 25vw;
+}
+
+#product_ul2 {
+    overflow-y: auto;
+    max-height: 20vh;
+    max-width: 20vw;
+    width: 20vw;
+    overflow-x: hidden;
+    margin: 0 auto;
 }
 
 .productImgInList {
@@ -196,7 +204,7 @@
 }
 
 .productList_wrapper {
-    padding: 25px;
+    padding: 20px;
 }
 
 @keyframes fadeIn {
