--- a/styles/infoBox.css
+++ b/styles/infoBox.css
@@ -11,7 +11,7 @@ body {
     background: rgba(102, 102, 102, 0.5);
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     display: none;
