--- a/styles/shopping_cart.css
+++ b/styles/shopping_cart.css
@@ -19,7 +19,7 @@ body {
     background: rgba(102, 102, 102, 0.5);
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     display: none;
@@ -169,7 +169,7 @@ body {
     background: rgba(77, 77, 77, 0.5);
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     display: none;
