--- a/styles/shopping_cart.css
+++ b/styles/shopping_cart.css
@@ -220,6 +220,8 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     margin: 0;
+    margin-top: 4vh;
+    margin-bottom: -5vh;
 }
 
 #types div {
@@ -231,5 +233,5 @@ body {
 }
 
 #sizes {
-    margin: 0;
+    margin: auto;
 }
